fix features title spacing on industry page

--- a/src/pages/industry/feature-card/feature-card.module.scss
+++ b/src/pages/industry/feature-card/feature-card.module.scss
@@ -12,6 +12,7 @@
     .title {
       font-weight: 500;
       font-size: 3rem;
+      line-height: 1;
     }
     .description {
       letter-spacing: 1px;
